# HelloBalls-2.0

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
SquareLine UI Project/: HelloBalls_ui.sll  HelloBalls_ui.spj  HelloBalls_ui_events.py  Themes.slt
components/buttons/: CMakeLists.txt
components/buttons/include/: app_button.h
components/buttons/src/: app_button.c
components/debugger/: CMakeLists.txt  debugger.cpp  debugger.h
components/leds/: CMakeLists.txt
components/leds/include/: leds.h
components/leds/src/: leds.c
components/motors/: CMakeLists.txt
components/motors/include/: app_motors.h  app_twai.h  bldc_motors.h  can_channel.h  controller.h  dji_rm_motors.h  dm3519.h  m2006.h  m3508.h  pid.h  rm2006.h  rm3508.h  servo.h  stepper_motors.h
components/motors/src/: app_motors.cpp  app_twai.c  bldc_motors.cpp  can_channel.cpp  dji_rm_motors.cpp  dm3519.cpp  stepper_example.cpp  stepper_motors.cpp
components/serial/: CMakeLists.txt
components/serial/include/: serial.h
components/serial/src/: serial.c  serial.cpp
components/szp_bsp/: CMakeLists.txt
components/szp_bsp/include/: esp32_s3_szp.h
components/szp_bsp/src/: esp32_s3_szp.c
components/temp_ui/: CMakeLists.txt
components/temp_ui/include/: app_ui.h
components/temp_ui/src/: app_ui.c  unomiku_320x198.c
components/ui/: CMakeLists.txt
components/ui_misc/: CMakeLists.txt  ui_misc.cpp  ui_misc.h
main/: CMakeLists.txt  HelloBalls.h  app_button.c  app_button.h  app_twai.c  app_twai.h  app_ui.c  app_ui.h  board_pins.h  debugHelper.cpp  dji_rm_motors.cpp  dji_rm_motors.h  dm3519.cpp  dm3519.h  esp32_s3_szp.c  esp32_s3_szp.h  idf_component.yml  main.c  main.cpp  pid.h  pid_example.c  state_machine.cpp  state_machine.h  twai_network_example_master_main.c  unomiku_320x198.c
main/ui/: CMakeLists.txt  custom_header.h  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
main/ui/screens/: ui_ScreenMainMenu.c  ui_ScreenScreen1.c
