# set(srcs    "main.c"
#             "esp32_s3_szp.c" 
#             "app_ui.c"
#             "app_button.c"
#             "app_twai.c")

# idf_component_register(SRCS ${srcs}
#                        REQUIRES ${requires}
#                        WHOLE_ARCHIVE
#                        INCLUDE_DIRS ".")